# tatto_pkg

./: CMakeLists.txt  README.md  package.xml
launch/: tatto_serial.launch.py
manual/: lets_write_ros2.md
src/: tatto_display.cpp  tatto_serial.cpp  tatto_touch_detector.cpp
tatto_ros2/: CMakeLists.txt  package.xml
tatto_ros2/launch/: tatto_serial.launch.py
tatto_ros2/src/: tatto_display.cpp  tatto_normalization.cpp  tatto_serial.cpp
tatto_ros2_msgs/: CMakeLists.txt  package.xml
tatto_ros2_msgs/msg/: SensorArray.msg
