<?xml version="1.0"?>
<?xml-model href="http://ros.org" schematypens="http://w3.org"?>
<package format="3">
  <name>tatto_ros2_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for tatto package</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Jazzy specific message package generation dependencies -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>